# rag-pipeline-production

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  eval.yml
data/sample_docs/: ai_agents.md  mlops_best_practices.md  rag_systems.md  transformer_architecture.md
docker/: Dockerfile  Dockerfile.ui  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  HANDOFF.md
scripts/: run_eval.sh  seed_db.sh  setup.sh
src/api/: main.py  schemas.py
src/api/middleware/: __init__.py  logging.py  rate_limit.py
src/config/: settings.py
src/embeddings/: __init__.py  cache.py  embedder.py
src/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
src/generation/: __init__.py  chain.py  llm.py  prompts.py  response_parser.py
src/ingestion/: __init__.py  chunker.py  loader.py  preprocessor.py
src/models/: __init__.py  document.py
src/retrieval/: __init__.py  query_transform.py  reranker.py  retriever.py
src/utils/: logger.py  monitoring.py
src/vectorstore/: __init__.py  base.py  chroma_store.py
tests/eval/: eval_dataset.json
tests/integration/: test_api.py  test_ingestion_pipeline.py
tests/unit/: test_api_evaluate.py  test_api_health.py  test_api_ingest.py  test_api_query.py  test_cache.py  test_chain.py  test_chunker.py  test_embedder.py  test_eval_dataset.py  test_eval_runner.py  test_llm.py  test_loader.py  test_metrics.py  test_prompts.py  test_reranker.py  test_retriever.py  test_settings.py
ui/: api_client.py  app.py  components.py  config.py
(+5 files in other folders)
